--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,29 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+        <!-- Default screen margins, per the Android Design guidelines. -->
+        <dimen name="activity_horizontal_margin">16dp</dimen>
+        <dimen name="activity_vertical_margin">16dp</dimen>
+
+        <!-- Font sizes -->
+        <dimen name="font_larger_34">34sp</dimen>
+        <dimen name="font_large_24">24sp</dimen>
+        <dimen name="font_normal_15">15sp</dimen>
+        <dimen name="font_small_13">13sp</dimen>
+
+        <!-- Spaces -->
+        <dimen name="spacing_larger_72">72dp</dimen>
+        <dimen name="spacing_large_56">56dp</dimen>
+        <dimen name="spacing_medium_48">48dp</dimen>
+        <dimen name="spacing_medium_32">32dp</dimen>
+        <dimen name="spacing_medium_24">24dp</dimen>
+        <dimen name="spacing_normal_16">16dp</dimen>
+        <dimen name="spacing_small_8">8dp</dimen>
+        <dimen name="spacing_tiny_4">4dp</dimen>
+
+        <!-- Sizes -->
+        <dimen name="size_large_72">72dp</dimen>
+        <dimen name="size_medium_56">56dp</dimen>
+        <dimen name="size_medium_48">48dp</dimen>
+        <dimen name="size_small_24">24dp</dimen>
+
+
 </resources>
