--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,10 @@
         <dimen name="activity_vertical_margin">16dp</dimen>
 
         <!-- Font sizes -->
-        <dimen name="font_larger_34">34sp</dimen>
-        <dimen name="font_large_24">24sp</dimen>
-        <dimen name="font_normal_15">15sp</dimen>
-        <dimen name="font_small_13">13sp</dimen>
+        <dimen name="font_size_34">34sp</dimen>
+        <dimen name="font_size_24">24sp</dimen>
+        <dimen name="font_size_15">15sp</dimen>
+        <dimen name="font_size_13">13sp</dimen>
 
         <!-- Spaces -->
         <dimen name="spacing_larger_72">72dp</dimen>
@@ -24,6 +24,8 @@
         <dimen name="size_medium_56">56dp</dimen>
         <dimen name="size_medium_48">48dp</dimen>
         <dimen name="size_small_24">24dp</dimen>
+
+        <dimen name="line_size">1dp</dimen>
 
 
 </resources>
