--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,256 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.activities.MainActivity">
+    android:fitsSystemWindows="true"
+    tools:context="com.softdesign.devintensive.ui.activities.MainActivity">
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_coordinator_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fitsSystemWindows="true"
+                app:contentScrim="@color/color_primary"
+                app:expandedTitleTextAppearance="@android:style/TextAppearance.Large"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <ImageView
+                    android:id="@+id/toolbar_image_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/profile_image_size"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/user_photo"
+                    app:layout_collapseMode="parallax"/>
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:theme="@style/ThemeOverlay.AppCompat.Light"
+                    app:titleTextColor="@android:color/white"/>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+        <!--
+                <include
+                    layout="@layout/user_ratings"
+                    android:fitsSystemWindows="true"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
+                        <include
+                            layout="@layout/user_ratings"
+                            android:fitsSystemWindows="true"
+                            app:layout_behavior="com.softdesign.devintensive.ui.view.behaviors.UserRatingItemBeahavior"/>
+                -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/grey"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/spacing_medium_32"
-            android:paddingTop="@dimen/spacing_medium_32">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                <TextView
-                    android:id="@+id/rating_txt"
-                    style="@style/header_text.large"
-                    android:text="@string/header_rating_vol"/>
 
-                <TextView
-                    style="@style/header_text"
-                    android:text="@string/header_rating"/>
+            <include layout="@layout/user_ratings"/>
 
-            </LinearLayout>
 
-            <View
-                android:layout_width="@dimen/line_size"
+
+
+            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/grey_light"/>
+                android:orientation="vertical"
+                tools:context=".ui.activities.MainActivity">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/code_strings_txt"
-                    style="@style/header_text.large"
-                    android:text="@string/header_code_strings_vol"/>
-
-                <TextView
-                    style="@style/header_text"
-                    android:text="@string/header_code_strings"/>
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="@dimen/line_size"
-                android:layout_height="match_parent"
-                android:background="@color/grey_light"/>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/projects_txt"
-                    style="@style/header_text.large"
-                    android:text="@string/header_projects_vol"/>
-
-                <TextView
-                    style="@style/header_text"
-                    android:text="@string/header_projects"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout style="@style/outer_layout">
-
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_call_black_24dp"/>
-
-            <LinearLayout style="@style/inner_layout">
-
-                <android.support.design.widget.TextInputLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/phone_edit"
-                        style="@style/text_edit"
-                        android:hint="@string/contacts_mobile"
-                        android:inputType="phone"
-                        android:text="@string/contacts_mobile_vol"/>
 
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-            <ImageView
-                style="@style/icon.right"
-                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
+                    <include layout="@layout/user_info"/>
+                </LinearLayout>
+                <!--
+                           <LinearLayout
+                               android:layout_width="match_parent"
+                               android:layout_height="match_parent"
+                               android:orientation="vertical">
+                           </LinearLayout>
+               -->
+            </android.support.v4.widget.NestedScrollView>
 
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_size"
-            android:layout_marginLeft="@dimen/spacing_larger_72"
-            android:background="@color/grey_light"/>
 
-        <LinearLayout style="@style/outer_layout">
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/fab_right_space"
+            android:src="@drawable/ic_mode_edit_black_24dp"
+            app:layout_anchor="@id/appbar_layout"
+            app:layout_anchorGravity="bottom|right"/>
+    </android.support.design.widget.CoordinatorLayout>
 
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_mail_black_24dp"/>
 
-            <LinearLayout style="@style/inner_layout">
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+    </android.support.design.widget.NavigationView>
+</android.support.v4.widget.DrawerLayout>
 
-                    <EditText
-                        android:id="@+id/email_edit"
-                        style="@style/text_edit"
-                        android:hint="@string/contacts_email"
-                        android:inputType="textEmailAddress"
-                        android:text="@string/contacts_email_vol"/>
 
-                </android.support.design.widget.TextInputLayout>
 
-            </LinearLayout>
 
-            <ImageView
-                style="@style/icon.right"
-                android:src="@drawable/ic_send_black_24dp"/>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_size"
-            android:layout_marginLeft="@dimen/spacing_larger_72"
-            android:background="@color/grey_light"/>
-
-        <LinearLayout style="@style/outer_layout">
-
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_vk"/>
-
-            <LinearLayout style="@style/inner_layout">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/vk_profile_edit"
-                        style="@style/text_edit"
-                        android:hint="@string/contacts_vk"
-                        android:inputType="textUri"
-                        android:text="@string/contacts_vk_vol"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-            <ImageView
-                style="@style/icon.right"
-                android:src="@drawable/ic_visibility_black_24dp"/>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_size"
-            android:layout_marginLeft="@dimen/spacing_larger_72"
-            android:background="@color/grey_light"/>
-
-        <LinearLayout style="@style/outer_layout">
-
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_git_circle_24dp"/>
-
-            <LinearLayout style="@style/inner_layout">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/repo_edit"
-                        style="@style/text_edit"
-                        android:hint="@string/contacts_repo"
-                        android:inputType="textUri"
-                        android:text="@string/contacts_repo_vol"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-            <ImageView
-                style="@style/icon.right"
-                android:src="@drawable/ic_visibility_black_24dp"/>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_size"
-            android:layout_marginLeft="@dimen/spacing_larger_72"
-            android:background="@color/grey_light"/>
-
-        <LinearLayout style="@style/outer_layout">
-
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_account_circle_black_24dp"/>
-
-            <LinearLayout
-                style="@style/inner_layout"
-                android:layout_height="wrap_content">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/spacing_normal_16">
-
-                    <EditText
-                        android:id="@+id/about_edit"
-                        style="@style/text_edit"
-                        android:hint="@string/contacts_about"
-                        android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
-                        android:text="@string/contacts_about_vol"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
