--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
@@ -11,6 +11,7 @@
         <!-- Remove EditText bottom line in disabled mode -->
         <item name="colorControlNormal">@android:color/white</item>
     </style>
+
 
     <style name="icon">
         <item name="android:layout_width">wrap_content</item>
@@ -29,17 +30,19 @@
     </style>
 
     <!-- Contacts page header -->
-    <style name="header_text">
+    <style name="user_rating">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
         <item name="android:textColor">@android:color/white</item>
-
     </style>
 
-    <!-- Contacts page header -->
-    <style name="header_text.large">
-        <item name="android:textSize">@dimen/font_size_24</item>
+    <style name="user_rating.value">
+        <item name="android:textSize">@dimen/text_size_user_rating_value</item>
+    </style>
+
+    <style name="user_rating.caption">
+        <item name="android:textSize">@dimen/text_size_user_rating_caption</item>
     </style>
 
     <!-- Contacts page outer LinearLayout -->
@@ -66,12 +69,35 @@
     <style name="text_edit">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:enabled">false</item>
-        <item name="android:focusable">false</item>
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:textColorHint">@color/grey</item>
-        <item name="android:textSize">@dimen/font_size_15</item>
+    </style>
 
+
+    <style name="divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/line_size</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_larger_72</item>
+        <item name="android:background">@color/grey_light</item>
+    </style>
+
+
+    <!--drawer header-->
+
+    <style name="drawer_header">
+        <item name="android:textColor">@android:color/white</item>
+
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <!--
+TODO req sdk 16+
+-->
+    <style name="drawer_header.user_name" parent="drawer_header">
+        <item name="android:fontFamily" tools:targetApi="jelly_bean">sans-serif</item>
+    </style>
+
+    <style name="drawer_header.email" parent="drawer_header">
+        <item name="android:fontFamily" tools:targetApi="jelly_bean">sans-serif-condensed</item>
     </style>
 
 </resources>
