--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,11 @@
                 app:expandedTitleTextAppearance="@android:style/TextAppearance.Large"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+
+                <!-- Photo -->
+                <include layout="@layout/activity_main_profile_photo"/>
+
+                <!--
                 <ImageView
                     android:id="@+id/toolbar_image_view"
                     android:layout_width="match_parent"
@@ -40,7 +45,7 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/user_photo"
                     app:layout_collapseMode="parallax"/>
-
+-->
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
@@ -52,18 +57,7 @@
             </android.support.design.widget.CollapsingToolbarLayout>
 
         </android.support.design.widget.AppBarLayout>
-        <!--
-                <include
-                    layout="@layout/user_ratings"
-                    android:fitsSystemWindows="true"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-
-                        <include
-                            layout="@layout/user_ratings"
-                            android:fitsSystemWindows="true"
-                            app:layout_behavior="com.softdesign.devintensive.ui.view.behaviors.UserRatingItemBeahavior"/>
-                -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,13 +65,10 @@
             android:orientation="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
             <include layout="@layout/user_ratings"/>
 
-
-
-
             <android.support.v4.widget.NestedScrollView
+                android:id="@+id/scroll_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -91,17 +82,10 @@
 
                     <include layout="@layout/user_info"/>
                 </LinearLayout>
-                <!--
-                           <LinearLayout
-                               android:layout_width="match_parent"
-                               android:layout_height="match_parent"
-                               android:orientation="vertical">
-                           </LinearLayout>
-               -->
+
             </android.support.v4.widget.NestedScrollView>
 
         </LinearLayout>
-
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -111,6 +95,7 @@
             android:src="@drawable/ic_mode_edit_black_24dp"
             app:layout_anchor="@id/appbar_layout"
             app:layout_anchorGravity="bottom|right"/>
+
     </android.support.design.widget.CoordinatorLayout>
 
 
