--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -6,18 +6,24 @@
     <LinearLayout style="@style/outer_layout">
 
         <ImageView
-            style="@style/icon.left"
+            style="@style/user_info_icon.left"
             android:src="@drawable/ic_call_black_24dp"/>
 
-        <LinearLayout style="@style/inner_layout">
+        <LinearLayout style="@style/inner_layout"
+            android:id="@+id/phone_layout">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/phone_input"
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/phone_edit"
-                    style="@style/text_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:focusable="false"
                     android:hint="@string/contacts_mobile"
                     android:inputType="phone"
                     android:text="@string/contacts_mobile_vol"/>
@@ -28,7 +34,7 @@
 
         <ImageView
             android:id="@+id/call_img"
-            style="@style/icon.right"
+            style="@style/user_info_icon.right"
             android:src="@drawable/ic_phone_in_talk_black_24dp"/>
 
     </LinearLayout>
@@ -38,18 +44,22 @@
     <LinearLayout style="@style/outer_layout">
 
         <ImageView
-            style="@style/icon.left"
+
+            style="@style/user_info_icon.left"
             android:src="@drawable/ic_mail_black_24dp"/>
 
         <LinearLayout style="@style/inner_layout">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/email_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/email_edit"
-                    style="@style/text_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
                     android:hint="@string/contacts_email"
                     android:inputType="textEmailAddress"
                     android:text="@string/contacts_email_vol"/>
@@ -59,7 +69,8 @@
         </LinearLayout>
 
         <ImageView
-            style="@style/icon.right"
+            android:id="@+id/email_img"
+            style="@style/user_info_icon.right"
             android:src="@drawable/ic_send_black_24dp"/>
 
     </LinearLayout>
@@ -69,18 +80,21 @@
     <LinearLayout style="@style/outer_layout">
 
         <ImageView
-            style="@style/icon.left"
+            style="@style/user_info_icon.left"
             android:src="@drawable/ic_vk"/>
 
         <LinearLayout style="@style/inner_layout">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/vk_profile_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/vk_profile_edit"
-                    style="@style/text_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
                     android:hint="@string/contacts_vk"
                     android:inputType="textUri"
                     android:text="@string/contacts_vk_vol"/>
@@ -90,7 +104,8 @@
         </LinearLayout>
 
         <ImageView
-            style="@style/icon.right"
+            android:id="@+id/vk_img"
+            style="@style/user_info_icon.right"
             android:src="@drawable/ic_visibility_black_24dp"/>
 
     </LinearLayout>
@@ -100,18 +115,21 @@
     <LinearLayout style="@style/outer_layout">
 
         <ImageView
-            style="@style/icon.left"
+            style="@style/user_info_icon.left"
             android:src="@drawable/ic_git_circle_24dp"/>
 
         <LinearLayout style="@style/inner_layout">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/repo_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/repo_edit"
-                    style="@style/text_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
                     android:hint="@string/contacts_repo"
                     android:inputType="textUri"
                     android:text="@string/contacts_repo_vol"/>
@@ -121,7 +139,8 @@
         </LinearLayout>
 
         <ImageView
-            style="@style/icon.right"
+            android:id="@+id/repo_img"
+            style="@style/user_info_icon.right"
             android:src="@drawable/ic_visibility_black_24dp"/>
 
     </LinearLayout>
@@ -131,7 +150,7 @@
     <LinearLayout style="@style/outer_layout">
 
         <ImageView
-            style="@style/icon.left"
+            style="@style/user_info_icon.left"
             android:src="@drawable/ic_account_circle_black_24dp"/>
 
         <LinearLayout
@@ -139,13 +158,16 @@
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/about_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/spacing_normal_16">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/about_edit"
-                    style="@style/text_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
                     android:hint="@string/contacts_about"
                     android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                     android:text="@string/contacts_about_vol"/>
