--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -3,11 +3,16 @@
     <group android:checkableBehavior="single">
         <item android:title="Мой профиль"
             android:checkable="true"
-            android:id="@+id/user_profile_menu"
+            android:id="@+id/profile"
             android:icon="@drawable/ic_account_circle_black_24dp"/>
 
         <item android:title="Команда"
-              android:id="@+id/team_menu"
+              android:id="@+id/team"
               android:icon="@drawable/ic_people_black_24dp"/>
+
+        <item
+            android:id="@+id/logout"
+            android:icon="@drawable/ic_logout_black_24dp"
+            android:title="@string/logout" />
     </group>
 </menu>
