hometask_6 без детализации списка, локальная промеж. версия

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="172dp"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:background="@drawable/drawer_header_bg"
                 android:paddingBottom="@dimen/spacing_small_8"
                 android:paddingLeft="@dimen/spacing_normal_16"
@@ -15,18 +15,11 @@
             android:layout_height="60dp"
             android:layout_marginTop="@dimen/spacing_normal_16"/>
     -->
-    <com.pkmmte.view.CircularImageView
+    <ImageView
         android:id="@+id/avatar"
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
         android:layout_marginTop="@dimen/spacing_normal_16"
-        app:border_color="@android:color/black"
-        app:border_width="4dp"
-        app:selector_stroke_color="@android:color/black"
-        app:selector="true"
-        app:selector_stroke_width="4dp"
-
-        app:shadow="true"
         />
 
     <LinearLayout
