--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,8 @@
         <attr name="regexp" format="string"/>
         <attr name="prefix" format="string"/>
     </declare-styleable>
+
+    <declare-styleable name="AspectRatioImageView">
+        <attr name="aspect_ratio" format="float"/>
+    </declare-styleable>
 </resources>
