--- a/app/src/main/res/values/text_sizes.xml
+++ b/app/src/main/res/values/text_sizes.xml
@@ -10,4 +10,11 @@
     <dimen name="user_rating_value_text_size">24sp</dimen>
     <dimen name="user_rating_caption_text_size">14sp</dimen>
     <dimen name="change_photo_text_size">20sp</dimen>
+
+    <dimen name="user_list_item_name_text_size">24sp</dimen>
+
+    <dimen name="user_list_item_rating_text_size">22sp</dimen>
+    <dimen name="user_list_item_rating_caption_text_size">14sp</dimen>
+    <dimen name="user_list_item_bio_text_size">14sp</dimen>
+
 </resources>
