--- a/app/src/main/res/values/text_sizes.xml
+++ b/app/src/main/res/values/text_sizes.xml
@@ -16,5 +16,7 @@
     <dimen name="user_list_item_rating_text_size">22sp</dimen>
     <dimen name="user_list_item_rating_caption_text_size">14sp</dimen>
     <dimen name="user_list_item_bio_text_size">14sp</dimen>
+    <dimen name="text_size_16">16sp</dimen>
+    <dimen name="text_size_20">20sp</dimen>
 
 </resources>
